finalized plugin